[package]
name = "runner-actions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "flexnetos_runner self-hosted GitHub Actions runner supervisor (JIT/ephemeral)"

[[bin]]
name = "fxrun-actions"
path = "src/main.rs"

[dependencies]
runner-core = { path = "../runner-core" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
