[package]
name = "runner-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "flexnetos_runner core: signed job-spec, kernel router, fork-PR isolation, JIT lifecycle"

[dependencies]
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
